; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_readln.c_Readline.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_readln.c_Readline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gIsTTYr = common dso_local global i64 0, align 8
@stdin = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @Readline(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [256 x i8], align 16
  store i8* %0, i8** %3, align 8
  %8 = load i64, i64* @gIsTTYr, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* @getline(i8* %11)
  store i8* %12, i8** %5, align 8
  br label %34

13:                                               ; preds = %1
  %14 = getelementptr inbounds [256 x i8], [256 x i8]* %7, i64 0, i64 0
  %15 = load i32, i32* @stdin, align 4
  %16 = call i8* @fgets(i8* %14, i32 255, i32 %15)
  store i8* %16, i8** %5, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %33

19:                                               ; preds = %13
  %20 = load i8*, i8** %5, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @strlen(i8* %21)
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %20, i64 %23
  %25 = getelementptr inbounds i8, i8* %24, i64 -1
  store i8* %25, i8** %6, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = load i8, i8* %26, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp eq i32 %28, 10
  br i1 %29, label %30, label %32

30:                                               ; preds = %19
  %31 = load i8*, i8** %6, align 8
  store i8 0, i8* %31, align 1
  br label %32

32:                                               ; preds = %30, %19
  br label %33

33:                                               ; preds = %32, %13
  br label %34

34:                                               ; preds = %33, %10
  %35 = load i8*, i8** %5, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %37, label %48

37:                                               ; preds = %34
  %38 = load i8*, i8** %5, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 0
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp eq i32 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %37
  store i8* null, i8** %2, align 8
  br label %50

44:                                               ; preds = %37
  %45 = load i8*, i8** %5, align 8
  %46 = call i8* @StrDup(i8* %45)
  store i8* %46, i8** %4, align 8
  %47 = load i8*, i8** %4, align 8
  store i8* %47, i8** %5, align 8
  br label %48

48:                                               ; preds = %44, %34
  %49 = load i8*, i8** %5, align 8
  store i8* %49, i8** %2, align 8
  br label %50

50:                                               ; preds = %48, %43
  %51 = load i8*, i8** %2, align 8
  ret i8* %51
}

declare dso_local i8* @getline(i8*) #1

declare dso_local i8* @fgets(i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @StrDup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
